new Functionality And bug fixed